# instantiaton-proxy

./: Cargo.toml  README.md  bun.lockb  index.ts  lib.rs  package.json
artifacts/: instantiate_proxy.json  phalaworld.json
